Fixed search container's margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -154,4 +154,7 @@
     #search-bar {
         width: 75vw;
     }
+    .search-container {
+        margin-top: 40px;
+    }
 }
